# bookstore

./: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: test_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_rename_titles_product_title.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  test_product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
