[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Your Name",email = "you@example.com"}
]

requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "faker (>=38.2.0,<39.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "gitpython (>=3.1.45,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
